# swffgdice-gui

./: .gitignore  CMakeLists.txt  LICENSE  conanfile.txt
res/: qt.conf  res.qrc
res/ui/: App.qml  ValueRow.qml
src/: App.cpp  App.h  ResultModel.cpp  ResultModel.h  main.cpp
